# tgf_tethysdash_plugins

./: .gitignore  README.md  pyproject.toml
tethysdash_plugins/: _cache.py  _icimod.py  compute_metrics.py  exceedance_probability.py  flow_duration_curve.py  forecast_vs_observed.py  geoglows_forecast.py  hydrograph.py  metrics_table.py  nepal_performance_layer.py  residuals.py  scatter_plot.py  seasonal_analysis.py  station_performance.py  taylor_diagram.py
tethysdash_plugins/static/: NepalStations.geojson
tethysdash_plugins/streamflow_cache/: 240.parquet  251.6.parquet  269.5.parquet  280.parquet  289.95.parquet  350.parquet  360.parquet  375.parquet  390.parquet  419.1.parquet  430.5.parquet  439.7.parquet  440.parquet  447.parquet  448.parquet  449.91.parquet  450.parquet  530.parquet  54902.parquet  550.05.parquet  581.parquet  58807.parquet  589.parquet  602.parquet  604.5.parquet  620.parquet  647.parquet  670.parquet  684.parquet  690.parquet  695.parquet
