[project]
name = "tgf_tethysdash_plugins"
version = "0.1.0"
description = "A Tethys plugin collection for Dash integration."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Your Name", email = "you@example.com" }
]
license = { text = "MIT" }
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]
dependencies = [
  "tethys-platform>=4.0",
  "gdown>=5.0",
  "geoglows>=2.0",
  "pandas>=1.5"
]

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.entry-points."intake.drivers"]
tgf_geoglows_forecast_plot = "tethysdash_plugins.forecast_vs_observed:ForecastVsObserved"
tgf_hydrograph = "tethysdash_plugins.hydrograph:Hydrograph"
tgf_scatter_plot = "tethysdash_plugins.scatter_plot:ScatterPlot"
tgf_flow_duration_curve = "tethysdash_plugins.flow_duration_curve:FlowDurationCurve"
tgf_residuals = "tethysdash_plugins.residuals:Residuals"
tgf_seasonal_analysis = "tethysdash_plugins.seasonal_analysis:SeasonalAnalysis"
tgf_taylor_diagram = "tethysdash_plugins.taylor_diagram:TaylorDiagram"
tgf_metrics_table = "tethysdash_plugins.metrics_table:MetricsTable"
tgf_geoglows_forecast = "tethysdash_plugins.geoglows_forecast:GeoglowsForecast"
tgf_exceedance_probability = "tethysdash_plugins.exceedance_probability:ExceedanceProbability"
tgf_station_performance = "tethysdash_plugins.station_performance:StationPerformance"
tgf_nepal_performance_layer = "tethysdash_plugins.nepal_performance_layer:NepalPerformanceLayer"

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.packages.find]
include = ["*"]

[tool.setuptools.package-data]
"tethysdash_plugins" = ["static/*.png", "static/*.jpg", "static/*.json", "static/*.geojson", "configurations/*.json", "streamflow_cache/*.parquet"]
